--- a/index.html
+++ b/index.html
@@ -53,6 +53,23 @@
             font-size: 12px; /* 글자 크기 조정 */
             z-index: 1; /* 다른 요소 위에 표시 */
         }
+
+        /* 반응형 디자인 */
+        @media (max-width: 768px) {
+            #map {
+                height: 400px; /* 모바일에서 지도 높이 조정 */
+                width: 100%; /* 폭을 100%로 설정 */
+            }
+            h1 {
+                font-size: 1.5em; /* 모바일에서 글자 크기 조정 */
+            }
+            #info {
+                font-size: 0.9em; /* 모바일에서 정보 글자 크기 조정 */
+            }
+            #footer {
+                font-size: 10px; /* 모바일에서 바닥글 글자 크기 조정 */
+            }
+        }
     </style>
     <script src="https://openlayers.org/en/v4.6.5/build/ol.js"></script>
 </head>
@@ -117,3 +134,4 @@
     </script>
 </body>
 </html>
+
